# revolutions-benchmarking

./: multi_httpPoller_points_geojson.js  multi_httpPoller_points_geojson_alt.js  multi_httpReceiver_points_geojson.js  multi_httpReceiver_points_geojson_.js  single_dataGenerator_points_geojson_tcp.js  single_httpPoller_points_geojson.js  single_httpReceiver_points_geojson.js  single_tcp_points_geojson.js
GeoEvent-Benchmarking-main/get-aws-metrics/: pyproject.toml
GeoEvent-Benchmarking-main/get-aws-metrics/get_aws_metrics/: aws_metrics_10_200.csv  aws_metrics_1_12800.csv  aws_metrics_1_19200.csv  aws_metrics_1_25600.csv  aws_metrics_1_3200.csv  aws_metrics_1_6400.csv  get_cloudwatch.py  httpPoller_awsMetrics_1_12800.csv  httpPoller_awsMetrics_1_1600.csv  httpPoller_awsMetrics_1_19200.csv  httpPoller_awsMetrics_1_200.csv  httpPoller_awsMetrics_1_25600.csv  httpPoller_awsMetrics_1_3200.csv  httpPoller_awsMetrics_1_400.csv  httpPoller_awsMetrics_1_6400.csv  httpPoller_awsMetrics_1_800.csv  tcp_awsMetrics_10_12800.csv  tcp_awsMetrics_10_19200.csv  tcp_awsMetrics_10_25600.csv  tcp_awsMetrics_1_12800.csv  tcp_awsMetrics_1_1600.csv  tcp_awsMetrics_1_19200.csv  tcp_awsMetrics_1_200.csv  tcp_awsMetrics_1_25600.csv  tcp_awsMetrics_1_3200.csv  tcp_awsMetrics_1_400.csv  tcp_awsMetrics_1_6400.csv  tcp_awsMetrics_1_800.csv  webSocket_awsMetrics_1_1600.csv  webSocket_awsMetrics_1_200.csv  webSocket_awsMetrics_1_3200.csv  webSocket_awsMetrics_1_400.csv  webSocket_awsMetrics_1_4800.csv  webSocket_awsMetrics_1_6400.csv  webSocket_awsMetrics_1_800.csv  webSocket_awsMetrics_1_all.csv
(+8 files in other folders)
