[tool.poetry]
name = "get-aws-metrics"
version = "0.1.0"
description = ""
authors = ["Yujing Wu <ywu@esri.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.125"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
